--- a/config/nvim/coc-settings.json
+++ b/config/nvim/coc-settings.json
@@ -1,3 +1,3 @@
 {
-    "coc.preferences.formatOnSaveFiletypes": ["css", "markdown", "rust", "typescript"],
+    "coc.preferences.formatOnSaveFiletypes": ["css", "markdown", "rust", "typescript", "yaml"],
 }
