Update polybar config

--- a/config/leftwm/themes/Own/polybar/colors.ini
+++ b/config/leftwm/themes/Own/polybar/colors.ini
@@ -7,20 +7,20 @@
 
 
 [color]
-background = #292D3E
-foreground = #A6ACCD
+background = #24283b
+foreground = #c0caf5
 sep = #3F5360
-white = #C5C8C6
-black = #1d1f21
-red = #FF5370
-pink = #EC407A
+white = #a9b1d6
+black = #1D202F
+red = #f7768e
+pink = #bb9af7
 purple = #BA68C8
-blue = #82AAFF
-cyan = #89DDFF
+blue = #7aa2f7
+cyan = #7dcfff
 teal = #00B19F
-green = #C3E88D
+green = #9ece6a
 lime = #B9C244
-yellow = #FFCB6B
+yellow = #e0af68
 amber = #FBC02D
 orange = #E57C46
 brown = #AC8476
