--- a/config/leftwm/themes/Own/polybar/modules.ini
+++ b/config/leftwm/themes/Own/polybar/modules.ini
@@ -224,9 +224,23 @@ label-empty = " Desktop"
 
 [module/workspaces]
 type = internal/xworkspaces
-enable-click = true
-enable-scroll = true
-label-active-foreground = ${color.pink}
-label-occupied-foreground = ${color.cyan}
-label-urgent-foreground = ${color.red}
-label-empty-foreground = ${color.foreground}
+enable-scroll = false
+
+format = <label-state>
+label-monitor = %name%
+
+label-active = %name%
+label-active-foreground = ${color.background}
+label-active-background = ${color.green}
+label-active-padding = 1
+
+label-occupied = %name%
+label-occupied-foreground = ${color.background}
+label-occupied-background = ${color.blue}
+label-occupied-padding = 1
+
+label-urgent = %name%
+label-urgent-padding = 1
+
+label-empty = %name%
+label-empty-padding = 1
