--- a/config/leftwm/themes/Own/polybar/config.ini
+++ b/config/leftwm/themes/Own/polybar/config.ini
@@ -35,10 +35,10 @@ border-bottom-color = ${color.foreground}
 padding = 2
 module-margin-left = 1
 module-margin-right = 1
-font-0 = "VictorMono Nerd Font:size=12;4"
-font-1 = "VictorMono Nerd Font:size=12;3"
-font-2 = "feather:size=12;3"
-modules-left = sep date
+font-0 = Victor Mono
+font-1 = "Noto Color Emoji:size=2;1"
+font-2 = feather
+modules-left = date
 modules-center = workspaces
 modules-right = pulseaudio sep powermenu
 separator =
