--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -60,7 +60,7 @@ offset-x = 50%:-10%
 offset-y = 0%
 
 ; Background ARGB color (e.g. #f00, #ff992a, #ddff1023)
-background = ${color.background}
+background = #00292D3E
 
 ; Foreground ARGB color (e.g. #f00, #ff992a, #ddff1023)
 foreground = ${color.foreground}
@@ -95,13 +95,12 @@ line-color = ${color.primary}
 ; the border is placed withing this area. So you effectively only have the
 ; following horizontal space on the bar:
 ;   width - border-right-size - border-left-size
-border-size = 3
-border-color = ${color.background}
+border-size = 0
 
 ; Number of spaces to add at the beginning/end of the bar
 ; Individual side values can be defined using:
 ;   padding-{left,right}
-padding = 0
+padding = 1
 
 ; Number of spaces to add before/after each module
 ; Individual side values can be defined using:
@@ -127,8 +126,8 @@ font-1 = "Material\-Design\-Iconic\-Font:size=13;4"
 ;   modules-center = xwindow xbacklight
 ;   modules-right = ipc clock
 
-modules-left = cpu
-modules-center = i3
+modules-left = i3 cpu
+modules-center =
 modules-right = alsa date sysmenu
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
@@ -137,7 +136,7 @@ modules-right = alsa date sysmenu
 separator =
 
 ; Opacity value between 0.0 and 1.0 used on fade in/out
-dim-value = 1.0
+dim-value = 0
 
 ; Value to be used to set the WM_NAME atom
 ; If the value is empty or undefined, the atom value
@@ -277,6 +276,6 @@ compositing-border = over
 
 ; Enables pseudo-transparency for the bar
 ; If set to true the bar can be transparent without a compositor.
-pseudo-transparency = false
+pseudo-transparency = true
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
