polybar config bump

--- a/config/polybar/user_modules.ini
+++ b/config/polybar/user_modules.ini
@@ -2,7 +2,7 @@
 type = custom/text
 content = 
 
-content-background = ${color.primary}
+content-background = ${color.secondary}
 content-foreground = ${color.module-fg}
 content-padding = 2
 
