--- a/config/polybar/bars.ini
+++ b/config/polybar/bars.ini
@@ -1,7 +1,7 @@
 [bar]
 fill = 
 empty = 
-indicator = 
+indicator = 
 
 [module/volume]
 type = internal/alsa
@@ -225,7 +225,7 @@ type = internal/cpu
 
 ; Seconds to sleep between updates
 ; Default: 1
-interval = 0.5
+interval = 2
 
 ; Available tags:
 ;   <label> (default)
@@ -233,8 +233,7 @@ interval = 0.5
 ;   <ramp-load>
 ;   <ramp-coreload>
 ;;format = <label> <ramp-coreload>
-format = <bar-load> <label>
-format-prefix = " "
+format = <label> <bar-load>
 
 ; Available tokens:
 ;   %percentage% (default) - total cpu load averaged over all cores
@@ -244,16 +243,16 @@ format-prefix = " "
 label = "%percentage%%"
 
 ; Only applies if <bar-load> is used
-bar-load-width = 10
-bar-load-gradient = false
+bar-load-width = 15
+bar-load-gradient = true
 
-bar-load-indicator = ${bar.indicator}
+bar-load-indicator =  
 bar-load-indicator-foreground = ${color.foreground}
 
 bar-load-fill = ${bar.fill}
-bar-load-foreground-0 = ${color.foreground}
-bar-load-foreground-1 = ${color.foreground}
-bar-load-foreground-2 = ${color.foreground}
+bar-load-foreground-0 = ${color.primary}
+bar-load-foreground-1 = ${color.alternate}
+bar-load-foreground-2 = ${color.secondary}
 
 bar-load-empty = ${bar.empty}
 bar-load-empty-foreground = ${color.foreground}
@@ -302,7 +301,6 @@ format-unmounted-prefix = " "
 ;   %total%
 ;   %free%
 ;   %used%
-; Default: %mountpoint% %percentage_free%%
 label-mounted = %used%/%total%
 
 ; Available tokens:
@@ -345,7 +343,7 @@ interval = 2
 ;   <ramp-swap-used>
 ;   <ramp-swap-free>
 format = <bar-used> <label>
-format-prefix = " "
+; format-prefix = " "
 
 ; Available tokens:
 ;   %percentage_used% (default)
@@ -365,19 +363,19 @@ format-prefix = " "
 ;   %gb_swap_free%
 ;   %gb_swap_used%
 
-label = "%mb_used%"
+label = "%percentage_used%%"
 
 ; Only applies if <bar-used> is used
-bar-used-width = 10
-bar-used-gradient = false
+bar-used-width = 15
+bar-used-gradient = true
 
 bar-used-indicator = ${bar.indicator}
 bar-used-indicator-foreground = ${color.foreground}
 
 bar-used-fill = ${bar.fill}
-bar-used-foreground-0 = ${color.foreground}
-bar-used-foreground-1 = ${color.foreground}
-bar-used-foreground-2 = ${color.foreground}
+bar-used-foreground-0 = ${color.primary}
+bar-used-foreground-1 = ${color.alternate}
+bar-used-foreground-2 = ${color.secondary}
 
 bar-used-empty = ${bar.empty}
 bar-used-empty-foreground = ${color.foreground}
