--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -50,7 +50,7 @@ fixed-center = true
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in a width or height of 50% minus 10 pixels
 width = 100%
-height = 40
+height = 32
 
 ; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 ; the percentage can optionally be extended with a pixel offset like so:
@@ -126,8 +126,8 @@ font-1 = "Material\-Design\-Iconic\-Font:size=13;4"
 ;   modules-center = xwindow xbacklight
 ;   modules-right = ipc clock
 
-modules-left = i3 cpu
-modules-center =
+modules-left = i3
+modules-center = cpu_bar memory_bar
 modules-right = battery alsa date sysmenu
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
