--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -128,7 +128,7 @@ font-1 = "Material\-Design\-Iconic\-Font:size=13;4"
 
 modules-left = i3
 modules-center = cpu_bar memory_bar
-modules-right = battery alsa date sysmenu
+modules-right = battery pulseaudio date sysmenu
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
