--- a/config/polybar/modules.ini
+++ b/config/polybar/modules.ini
@@ -875,6 +875,8 @@ ramp-volume-0 = 
 ramp-volume-1 = 
 ramp-volume-2 = 
 
+click-right = pavucontrol
+
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/temperature]
