--- a/config/starship.toml
+++ b/config/starship.toml
@@ -1,3 +1,14 @@
+[battery]
+full_symbol = "🔋 "
+charging_symbol = "🔌 "
+discharging_symbol = "💀 "
+[[battery.display]]
+threshold = 10
+style = "bold red"
+[[battery.display]]
+threshold = 25
+style = "bold yellow"
+
 [character]
 success_symbol = "[🍑](bold green)"
 error_symbol = "[🍆](bold red) "
