--- a/config/nvim/coc-settings.json
+++ b/config/nvim/coc-settings.json
@@ -1,4 +1,7 @@
 {
-    "coc.preferences.formatOnSaveFiletypes": ["css", "markdown", "rust", "typescript", "yaml"],
-    "rust-analyzer.server.path": "/usr/bin/rust-analyzer"
+    "coc.preferences.formatOnSaveFiletypes": ["css", "markdown", "rust", "sql", "typescript", "yaml"],
+    "sql.database": "postgresql",
+    "sql.formatOptions": {
+      "language": "plsql"
+    }
 }
