--- a/config/i3/config
+++ b/config/i3/config
@@ -36,7 +36,7 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+f exec firefox
+bindsym $mod+f exec brave
 bindsym $mod+a exec pcmanfm
 
 workspace 1 output DP-2
@@ -44,7 +44,7 @@ workspace 4 output DP-2
 workspace 2 output DP-1
 workspace 5 output DP-1
 
-assign [class="firefox"] 1
+assign [class="brave"] 1
 assign [class="WebStorm"] 2
 assign [class="PhpStorm"] 2
 assign [class="code"] 2
