--- a/config/nvim/coc-settings.json
+++ b/config/nvim/coc-settings.json
@@ -1,7 +1,8 @@
 {
-    "coc.preferences.formatOnSaveFiletypes": ["css", "markdown", "rust", "sql", "typescript", "yaml"],
-    "sql.database": "postgresql",
+    "coc.preferences.formatOnSaveFiletypes": ["css", "html", "markdown", "rust","typescript", "yaml"],
+    "rust-analyzer.server.path": "/usr/bin/rust-analyzer",
     "sql.formatOptions": {
       "language": "plsql"
-    }
+    },
+    "sql.database": "mysql"
 }
