--- a/config/i3/config
+++ b/config/i3/config
@@ -13,7 +13,7 @@ font pango:"Victor Mono" 12
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork -i ~/.config/lock.png
+exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork -i ~/.config/lock.png -t
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
@@ -38,7 +38,7 @@ floating_modifier $mod
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+f exec firefox
-bindsym $mod+a exec pcmanfm
+bindsym $mod+a exec dolphin
 
 workspace 1 output HDMI-1
 workspace 4 output HDMI-1
