--- a/config/i3status-rust/config.toml
+++ b/config/i3status-rust/config.toml
@@ -1,6 +1,4 @@
-theme = "slick"
-[icons]
-name = "awesome5"
+theme = "nord-dark"
 [icons.overrides]
 cpu = "🔥"
 memory_mem = "🐘"
@@ -9,39 +7,13 @@ music = "📻"
 time = "📅"
 uptime = "🏭"
 
+[icons]
+name = "awesome5"
+
 [[block]]
 block = "focused_window"
 max_width = 50
 show_marks = "visible"
-
-[[block]]
-block = "cpu"
-interval = 1
-format = "{barchart} {utilization}"
-
-[[block]]
-block = "memory"
-display_type = "memory"
-format_mem = "{mem_used_percents} / {mem_total}"
-
-[[block]]
-block = "music"
-player = "spotify"
-buttons = ["play", "next"]
-
-[[block]]
-block = "networkmanager"
-on_click = "alacritty -e nmtui"
-interface_name_exclude = ["br\\-[0-9a-f]{12}", "docker\\d+"]
-interface_name_include = []
-
-[[block]]
-block = "uptime"
-
-[[block]]
-block = "battery"
-interval = 10
-format = "{percentage} {time}"
 
 [[block]]
 block = "sound"
@@ -49,7 +21,14 @@ on_click = "pavucontrol"
 max_vol = 100
 
 [[block]]
+block = "battery"
+interval = 10
+format = "{percentage} {time}"
+
+[[block]]
+block = "uptime"
+
+[[block]]
 block = "time"
 interval = 5
 format = "%d/%m %R"
-
