--- a/config/sway/config
+++ b/config/sway/config
@@ -3,7 +3,7 @@ set $left h
 set $down j
 set $up k
 set $right l
-set $term alacritty
+set $term wezterm
 set $menu wofi -I --show drun | xargs swaymsg exec -- 
 
 output DP-1 pos 0 0 res 2560x1440
@@ -17,9 +17,6 @@ input "type:keyboard" {
 
 exec dax -ae sway
 exec nm-applet
-exec dunst
-exec waybar
-exec ferdi
 
 workspace 1 output DP-2
 workspace 4 output DP-2
@@ -171,18 +168,15 @@ mode "resize" {
 }
 bindsym $mod+r mode "resize"
 
-# bar {
-#   font Victor Mono:12
-#   position top
-#   colors {
-#     background #00000000
-#     focused_workspace #00000000 #00000000 #C3E88D
-#     active_workspace #00000000 #00000000 #89DDFF
-#     inactive_workspace #00000000 #00000000 #A6ACCD
-#     urgent_workspace #00000000 #00000000 #E53935
-#   }
-# }
+bar {
+    position top
+    font pango:Iosevka 14
+    status_command i3status-rs
 
+    colors {
+        background #24283bdd
+    }
+}
 
 gaps inner 14
 default_border none
