--- a/config/i3/config
+++ b/config/i3/config
@@ -183,8 +183,8 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-	tray_output	DisplayPort-2
-        status_command  i3status-rs
+	tray_output	DP-3
+  status_command  i3status-rs
 	position	top
 	font		pango:Iosevka, DejaVu Sans Mono 14
 	height		30
