--- a/config/i3/config
+++ b/config/i3/config
@@ -22,9 +22,7 @@ font pango:monospace 8
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex --autostart --environment i3
-exec --no-startup-id picom --backend glx --config ~/.config/picom.conf
 exec --no-startup-id polkit-dumb-agent
-exec --no-startup-id /etc/X11/xinit/xinitrc.d/50-systemd-user.sh
 
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
@@ -59,7 +57,7 @@ bindsym $mod+Shift+q kill
 # start dmenu (a program launcher)
 # bindsym $mod+d exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
-bindcode $mod+40 exec "rofi -combi-modi drun -font 'Iosevka 12' -show combi -icon-theme 'Adwaita' -show-icons -theme sidebar"
+bindcode $mod+40 exec "rofi -font 'Iosevka Nerd Font 14' -show drun -show-icons -theme sidebar"
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
