--- a/config/i3/config
+++ b/config/i3/config
@@ -99,10 +99,12 @@ bindsym $mod+Shift+space floating toggle
 bindsym $mod+space focus mode_toggle
 
 # focus the parent container
-bindsym $mod+a focus parent
+#bindsym $mod+a focus parent
 
 # focus the child container
 #bindsym $mod+d focus child
+
+bindsym $mod+a exec dolphin
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
@@ -181,11 +183,19 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-	tray_output	DP-3
-  status_command  i3status-rs
-	position	top
-	font		pango:Iosevka, DejaVu Sans Mono 14
+	tray_output	DisplayPort-2
+	tray_padding	4px
+	status_command  i3status-rs
+	position	bottom
+	font		pango:Iosevka Nerd Font 14
 	height		30
+	colors 	{
+		focused_workspace	#f1d000 #f1d000 #1e1d40
+		active_workspace	#6871ff #6871ff #1e1d40
+		inactive_workspace	#79e8fb #79e8fb #1e1d40
+		urgent_workspace	#f92a1c	#f92a1c	#1edd40
+		background		#1e1d40
+	}
 }
 
 for_window [class=".*"] border pixel 0
