--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -11,9 +11,8 @@ OR EDIT THIS ONE ACCORDING TO THE WIKI INSTRUCTIONS.
 #
 
 # See https://wiki.hyprland.org/Configurig/Monitors/
-monitor=DP-3,2560x1440@144,0x0,1
-monitor=DP-1,2560x1440@144,2560x0,1
-
+monitor = DP-1,2560x1440@144,0x0,1
+monitor = DP-3,2560x1440@144,2560x0,1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -21,7 +20,6 @@ monitor=DP-1,2560x1440@144,2560x0,1
 # exec-once = waybar & hyprpaper & firefox
 #
 exec-once = waybar
-exec-once = swaybg --mode fill --image ~/.config/background.jpg
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = /usr/lib/kdeconnectd
 
@@ -126,7 +124,7 @@ $mainMod = SUPER
 $mainModShift = SUPER_SHIFT
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, RETURN, exec, wezterm
+bind = $mainMod, RETURN, exec, kitty
 bind = $mainModShift, Q, killactive, 
 bind = $mainMod, M, exit, 
 bind = $mainMod, E, exec, dolphin
