--- a/config/sway/config
+++ b/config/sway/config
@@ -6,8 +6,9 @@ set $right l
 set $term wezterm
 set $menu wofi -I --show drun | xargs swaymsg exec -- 
 
-output DP-3 pos 0 0 res 2560x1440
-output DP-1 pos 2560 0 res 2560x1440
+output DP-1 pos 0 0 res 2560x1440
+output DP-3 pos 2560 0 res 2560x1440
+# output DP-3 disable
 output * bg ~/.config/background.jpg fill
 
 input "type:keyboard" {
@@ -18,8 +19,8 @@ input "type:keyboard" {
 exec dax -ae sway
 exec nm-applet
 
-workspace 1 output DP-2
-workspace 4 output DP-2
+workspace 1 output DP-3
+workspace 4 output DP-3
 workspace 2 output DP-1
 workspace 5 output DP-1
 
@@ -44,7 +45,7 @@ assign [class="Wow.exe"] 5
     bindsym $mod+a exec dolphin
     bindsym $mod+f exec firefox
 
-    bindsym $mod+escape exec swaylock
+    bindsym $mod+escape exec swaylock -c 000000
 
     # Drag floating windows by holding down $mod and left mouse button.
     # Resize them with right mouse button + $mod.
@@ -171,7 +172,7 @@ bindsym $mod+r mode "resize"
 bar {
     position top
     font pango:Iosevka 14
-    status_command i3status-rs
+    swaybar_command waybar
 
     colors {
         background #24283bdd
@@ -182,3 +183,5 @@ gaps inner 14
 default_border none
 
 include /etc/sway/config.d/*
+
+exec waybar
