--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -17,9 +17,7 @@ monitor = DP-3,2560x1440@144,2560x0,1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-# exec-once = waybar & hyprpaper & firefox
-#
-exec-once = waybar
+exec-once = waybar & hyprpaper
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = /usr/lib/kdeconnectd
 
@@ -130,6 +128,7 @@ bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, D, exec, wofi -I --show drun
+bind = $mainMod, F, exec, firefox
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
