--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,5 +1,6 @@
 # vim:fileencoding=utf-8:foldmethod=marker
-include tokyonight_moon.conf
+# include tokyonight_moon.conf
+include shades_of_purple.conf
 
 #: Fonts {{{
 
@@ -25,7 +26,7 @@ font_family      Victor Mono
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 22
+font_size 14
 
 #: Font size (in pts)
 
