--- a/config/git/config
+++ b/config/git/config
@@ -52,3 +52,10 @@
 
 [includeIf "gitdir:~/src/work/"]
         path = ~/.config/git/work
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
+[trailer "changeid"]
+	key = Change-Id
