--- a/config/starship.toml
+++ b/config/starship.toml
@@ -37,55 +37,5 @@ style="bold bright-purple"
 [docker_context]
 detect_files = ['docker-compose.yml', 'docker-compose.yaml', 'compose.yaml', 'compose.yml', 'Containerfile', 'Dockerfile']
 
-
-[package]
-disabled=true
-[dart]
-disabled=true
-[dotnet]
-disabled=true
-[elixir]
-disabled=true
-[elm]
-disabled=true
-[erlang]
-disabled=true
-[golang]
-disabled=true
-[java]
-disabled=true
-[julia]
-disabled=true
-[kotlin]
-disabled=true
-[ocaml]
-disabled=true
-[perl]
-disabled=true
-[php]
-disabled=true
-[purescript]
-disabled=true
-[python]
-disabled=true
-[ruby]
-disabled=true
-[rust]
-disabled=true
-[scala]
-disabled=true
-[swift]
-disabled=true
-[conda]
-disabled=true
-[aws]
-disabled=true
-[gcloud]
-disabled=true
-[openstack]
-disabled=true
-[crystal]
-disabled=true
-[lua]
-disabled=true
-
+[direnv]
+format="[$symbol$loaded/$allowed]($style) "
