--- a/config/hypr/hyprpaper.conf
+++ b/config/hypr/hyprpaper.conf
@@ -1,3 +1,2 @@
-preload = ~/.config/background.jpg
-wallpaper = DP-1,~/.config/background.jpg
-wallpaper = DP-3,~/.config/background.jpg
+preload = /home/nicolas/.config/background.jpg
+wallpaper = ,/home/nicolas/.config/background.jpg
