--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -8,7 +8,7 @@ include shades_of_purple.conf
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Victor Mono
+font_family      IosevkaTerm Nerd Font
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
@@ -26,7 +26,7 @@ font_family      Victor Mono
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 14
+font_size 18
 
 #: Font size (in pts)
 
