--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,7 +1,3 @@
-# vim:fileencoding=utf-8:foldmethod=marker
-# include tokyonight_moon.conf
-include shades_of_purple.conf
-
 #: Fonts {{{
 
 #: kitty has very powerful font management. You can configure
@@ -26,7 +22,7 @@ font_family      IosevkaTerm Nerd Font
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 18
+font_size 16
 
 #: Font size (in pts)
 
@@ -1121,7 +1117,7 @@ font_size 18
 
 #: The foreground and background colors.
 
-# background_opacity 1.0
+background_opacity 0.7
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -2454,3 +2450,9 @@ font_size 18
 
 #: }}}
 #
+
+
+# BEGIN_KITTY_THEME
+# Catppuccin-Mocha
+include current-theme.conf
+# END_KITTY_THEME
