--- a/config/waybar/config
+++ b/config/waybar/config
@@ -1,69 +1,65 @@
 {
-    "battery": {
-        "format": "{icon} {capacity}%",
-        "format-alt": "{icon} {time}",
-        "format-charging": " {capacity}%",
-        "format-icons": [
-            "",
-            "",
-            "",
-            "",
-            ""
-        ],
-        "format-plugged": " {capacity}%",
-        "states": {
-            "critical": 15,
-            "warning": 30
-        }
-    },
-    "clock": {
-        "format-alt": "{:%Y-%m-%d}",
-        "timezone": "Europe/Paris",
-        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
-    },
-    "cpu": {
-        "format": "🧮 {usage}%",
-        "tooltip": false
-    },
-    "hyprland/workspaces": {
-        "all-outputs": true,
-        "disable-scroll": true
-    },
-    "hyprland/window": {
-      "rewrite": {
-        "(.*) — Mozilla Firefox": "🌎 $1",
-        "(.*) - fish": "> [$1]"
-      },
-      "separate-outputs": true
-    },
-    "memory": {
-        "format": "🐏 {}%"
-    },
-    "modules-center": [
-        "hyprland/window"
+  "battery": {
+    "format": "{icon} {capacity}%",
+    "format-alt": "{icon} {time}",
+    "format-charging": " {capacity}%",
+    "format-icons": [
+      "",
+      "",
+      "",
+      "",
+      ""
     ],
-    "modules-left": [
-        "hyprland/workspaces"
-    ],
-    "modules-right": [
-        "tray",
-        "clock"
-    ],
-    "position": "bottom",
-    "height": 30,
-    "temperature": {
-        "critical-threshold": 80,
-        "format": "{icon} {temperatureC}°C",
-        "format-critical": "{icon} {temperatureC}°C",
-        "format-icons": [
-            "🔥",
-            "🌡️",
-            "🧊"
-        ],
-        "hwmon-path": "/sys/class/hwmon/hwmon1/temp1_input",
-        "thermal-zone": 2
-    },
-    "tray": {
-        "spacing": 10
+    "format-plugged": " {capacity}%",
+    "states": {
+      "critical": 15,
+      "warning": 30
     }
+  },
+  "clock": {
+    "format-alt": "{:%Y-%m-%d}",
+    "timezone": "Europe/Paris",
+    "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
+  },
+  "cpu": {
+    "format": "🧮 {usage}%",
+    "tooltip": false
+  },
+  "hyprland/workspaces": {
+    "all-outputs": true,
+    "disable-scroll": true
+  },
+  "hyprland/window": {
+    "rewrite": {
+      "(.*) — Mozilla Firefox": "🌎 $1",
+      "(.*) - fish": "> [$1]"
+    },
+    "separate-outputs": true
+  },
+  "memory": {
+    "format": "🐏 {}%"
+  },
+  "wireplumber": {
+    "format": "{volume}% {icon}",
+    "format-muted": "",
+    "on-click": "pavucontrol",
+    "format-icons": ["", "", ""]
+  },
+  "modules-center": [
+    "hyprland/window"
+  ],
+  "modules-left": [
+    "hyprland/workspaces"
+  ],
+  "modules-right": [
+    "tray",
+    "wireplumber",
+    "battery",
+    "clock"
+  ],
+  "position": "top",
+  "height": 30,
+  "tray": {
+    "spacing": 10
+  }
 }
