--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -15,7 +15,7 @@ monitor=,highres,auto,1.5
 # Set programs that you use
 $terminal = kitty
 $fileManager = dolphin
-$menu = wofi --show drun
+$menu = rofi -show drun icon-theme "Papirus" -show-icons
 
 
 #################
