--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -16,6 +16,7 @@ monitor=,highres,auto,1.5
 $terminal = kitty
 $fileManager = dolphin
 $menu = rofi -show drun icon-theme "Papirus" -show-icons
+$clipboard = cliphist list | rofi -dmenu -display-columns 2 icon-theme "Papirus" -show-icons | cliphist decode | wl-copy
 
 
 #################
@@ -24,6 +25,9 @@ $menu = rofi -show drun icon-theme "Papirus" -show-icons
 
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
+
+exec-once = wl-paste --type text --watch cliphist store # Stores only text data
+exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 
 
 #############################
@@ -211,11 +215,12 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, F, exec, firefox
-bind = $mainMod, V, togglefloating,
+bind = $mainMod, Space, togglefloating,
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, W, movecurrentworkspacetomonitor, l
+bind = $mainMod, V, exec, $clipboard
 
 
 # Move focus with mainMod + arrow keys
