--- a/ansible/setup.yaml
+++ b/ansible/setup.yaml
@@ -54,6 +54,7 @@
         name:
           - ark
           - bat
+          - cliphist
           - curl
           - deluge-gtk
           - direnv
