--- a/ansible/setup.yaml
+++ b/ansible/setup.yaml
@@ -72,6 +72,7 @@
           - fnm-bin
           - gwenview
           - hyprland
+          - hyprlock
           - hyprpaper
           - less
           - man
