--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -221,6 +221,7 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, W, movecurrentworkspacetomonitor, l
 bind = $mainMod, V, exec, $clipboard
+bind = $mainMod, L, exec, hyprlock
 
 
 # Move focus with mainMod + arrow keys
