--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -3,7 +3,7 @@
 ################
 
 # See https://wiki.hypr.land/Configuring/Monitors/
-monitor=,highres,auto,1.5
+monitor=,prefered,auto,auto
 
 
 ###################
@@ -167,6 +167,10 @@ master {
 misc {
     force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
+}
+
+xwayland {
+  force_zero_scaling = true
 }
 
 
