--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -3,7 +3,7 @@
 ################
 
 # See https://wiki.hypr.land/Configuring/Monitors/
-monitor=,prefered,auto,auto
+monitor=eDP-1,prefered,auto,1.6
 
 
 ###################
